tests/ui/issues/issue-22886.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-22886.rs:13:6
   |
LL | impl<'a> Iterator for Newtype {
   |      ^^ unconstrained lifetime parameter
   |
help: make use of the lifetime parameter `'a` in the `self` type
   |
LL | impl<'a> Iterator for Newtype<'a> {
   |                              ++++
help: and add it to the struct definition of Newtype as well since it's used in the body of the impl
   |
LL | struct Newtype<'a>(Option<Box<usize>>);
   |               ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
